--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.10.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^24.9.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
